--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.0.0rc5",
     "jade": "*",
     "mongoose": "~3.3.1",
-    "winston": "~0.6.2"
+    "winston": "~0.6.2",
+    "twilio-js": "~0.1.1"
   }
 }
